style.css
@import url(reset.css);

body {
  font-family: Roboto, sans-serif;
  display: flex;
  justify-content: center;
}

.container {
  align-self: flex-start;
  margin-top: 10vh;
  border: 2px solid #333;
  position: relative;
  width: 60vw;
  padding: 3rem;
}

.title {
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1px;
  position: absolute;
  background: white;
  top: -1.7rem;
  left: 3rem;
}

.input__text {
  background-color: lightgray;
  border: 0;
  outline: 0;
  padding: 0.5rem 0 0.5rem 1rem;
  margin: 0;
  color: #333;
}

.input__text:focus {
  border: 2px dotted gray;
}

.input-group {
  display: flex;
}

.input-group > .input__text {
  flex: 10 1 auto;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.button--clear {
  text-transform: uppercase;
  border: 0;
  background: rgb(194, 194, 194);
  padding: 0.5rem 1rem;
  cursor: pointer;
}

.button--clear:hover {
  background: rgb(186, 186, 186);
}

.input-group > .input__button {
  flex: 1 1 auto;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.list {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 1.5rem 0;
  gap: 0.3rem;
  padding: 0;
}

.list:empty::after {
  content: "\2205\00A0No tasks";
}

.list__item {
  font-size: larger;
  color: #333;
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.list__item:has(:checked) {
  order: 1;
  background-color: rgba(211, 211, 211, 0.1);
}

.list__item-checkbox:checked + .list__item-text {
  text-decoration: line-through;
  color: rgb(115, 115, 115);
}

.list__item-remove {
  margin-left: auto;
  /* margin-right: 4rem; */
  background: transparent;
  border: 0;
  outline: 0;
  cursor: pointer;
  color: red;
  opacity: 0.4;
  transition: opacity ease-in-out;
}

.list__item-remove::before {
  content: "\2716";
}

.list__item-remove:hover {
  opacity: 1;
}

button:active {
  transform: translateY(1px);
}

